samples/bookmap/valid/R23.dita
<?xml version="1.0" encoding="UTF-8"?>
<bookmap>
  <booktitle><booklibrary>L</booklibrary><mainbooktitle>T</mainbooktitle></booktitle>
  <bookmeta/>
  <frontmatter/>
  <chapter href="c.dita"><topicmeta><navtitle>C</navtitle></topicmeta></chapter>
  <backmatter>
    <topicref href="revhistory.dita"/>
  </backmatter>
</bookmap>